deploy gh-pages

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "helpingfamilies",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://montoya332.github.io/helping-families",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
     "jquery-easing": "^0.0.1",
     "react": "^16.8.6",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+ "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": "react-app"
