--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jquery": "^3.4.1",
     "jquery-easing": "^0.0.1",
     "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
