--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "jquery": "^3.5.1",
     "jquery-easing": "^0.0.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
