--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy:gcloud": "gsutil -m rsync -R build gs://www.helpingfamiliesinsv.org/"
   },
   "eslintConfig": {
     "extends": "react-app"
